@@ -29,7 +29,7 @@ class Smarty_Internal_Compile_If extends Smarty_Internal_CompileBase {
         $this->_open_tag('if');
         if (is_array($args['if condition'])) {
             $_output = " <?php if (!isset(\$_smarty_tpl->tpl_vars[".$args['if condition']['var']."])) \$_smarty_tpl->tpl_vars[".$args['if condition']['var']."] = new Smarty_Variable;\n";
-            $_output .= " if (\$_smarty_tpl->tpl_vars[".$args['if condition']['var']."]->value = ".$args['if condition']['value']."): ?>";
+            $_output .= "if (\$_smarty_tpl->tpl_vars[".$args['if condition']['var']."]->value = ".$args['if condition']['value']."): ?>";
             return $_output;
         } else {
             return '<?php if (' . $args['if condition'] . '): ?>';
